spacing fixes

--- a/website/ca/style.css
+++ b/website/ca/style.css
@@ -152,11 +152,11 @@ h6 {
 
 .section_padding_100 {
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 
 .section_padding_100_50 {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 50px;
 }
 
